# mcp-manager

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DB_INTEGRAZIONE.md  DIAGRAMMA.md  LICENSE  PLAN_MIGLIORAMENTO.md  PLAN_V2.md  PLAN_V3.md  PLAN_V3_ESECUTIVO.md  PLAN_V4.md  PLAN_V4_ESECUTIVO.md  PLAN_V5_ESECUTIVO.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: codeql.yml  lint.yml  release.yml  stale.yml  test.yml
docs/planning/: PLAN_ESECUTIVO.md  PLAN_V5.md
scripts/: smoke_test.py
src/mcp_manager/: __init__.py  __main__.py  server.py  types.py
src/mcp_manager/data/: capabilities.json
src/mcp_manager/tools/: audit_tools.py  config_tools.py  info_tools.py  local_tools.py  search_tools.py  trust_tools.py
src/mcp_manager/utils/: capabilities.py  config.py  github.py  registry.py
tests/: test_capabilities.py  test_config.py  test_github.py  test_registry.py  test_server.py
