[project]
name = "mcp-manager"
version = "0.1.0"
description = "MCP server for discovering, evaluating, and managing MCP servers from the official registry"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
mcp-manager = "mcp_manager.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.uv]
package = true
