[project]
name = "mcp-manager"
version = "0.2.0"
description = "MCP server for discovering, evaluating, and managing MCP servers from the official registry"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "matrixNeo76"},
]
keywords = ["mcp", "model-context-protocol", "registry", "mcp-server", "discovery", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/matrixNeo76/mcp-manager"
Repository = "https://github.com/matrixNeo76/mcp-manager.git"
Documentation = "https://github.com/matrixNeo76/mcp-manager/blob/main/README.md"
Changelog = "https://github.com/matrixNeo76/mcp-manager/blob/main/CHANGELOG.md"

[project.scripts]
mcp-manager = "mcp_manager.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.uv]
package = true
